= Release Notes
:drivers_repo: http://ocient-archive/ocientrepo/java/jdbc

All our jdbc drivers are located {drivers_repo}[here]. 
Below is the release notes for every driver version that has customer implication.

//tag::compact[] 
== 2.11 (2021-5-20)

New Features:: 

 * Improve cache and statement pooling support for redirection.

//tag::compact[] 
== 2.10 (2021-5-19)

New Features:: 

 * Added 10 different colors for GIS types in KML
 * Added non-GIS types to description of each GIS object in KML
 * Moved KML feature from CLI to driver

//tag::compact[] 
== 2.09 (2021-5-18)

New Features:: 

 * Use daemon threads for background caching tasks. This allows the program to exit without finishing these tasks.

//tag::compact[] 
== 2.08 (2021-5-10)

New Features:: 

 * Add versions packaging to pom.xml.
 * Updated dependencies to latest version using versions plugin.
 * Change TLS to unverified by default.

//tag::compact[] 
== 2.07 (2021-5-05)

New Features:: 

 * Add OBJECT_NOT_FOUND_WARN warning.
 * Add OBJECT_ALREADY_EXISTS_WARN warning.
 * Fix some misleading log messages.

//tag::compact[] 
== 2.06 (2021-4-29)

New Features:: 

 * Add a log for if reconnect() fails to close a socket.
 * Driver sends over unique session ID to server.
 * Fix a misleading log in client handshake.

//tag::compact[] 
== 2.05 (2021-4-28)

New Features:: 

 * Fix spotbugs and narrow spotbugs filter.

//tag::compact[] 
== 2.04 (2021-4-22)

New Features:: 

 * Added getters to GIS types
 
//tag::compact[]
== 2.03 (2021-4-22)

New Features:: 

 * Output next query also prints all gis types into a kml file

//tag::compact[]
== 2.01 (2021-4-21)

New Features:: 

 * Fix empty point for STPoint class

//tag::compact[]
== 2.01 (2021-4-20)

New Features:: 

 * Better build integration with xgsrc
 * Upgraded protobuf to version 3.14

//tag::compact[]
== 2.00 (2021-4-17)

New Features:: 

 * Handling for cache limit warning.

//tag::compact[]
== 1.99 (2021-4-13)

New Features:: 
